Revision history for Fatal

1.10_08

        * 5.8 now has the ability to differentiate between calls
          that return false to indicate failure, and those that
          only return undef to indicate failure.  CORE::send and
          CORE::recv are examples of these.

1.10_07  Sun Jun 29 15:54:26 AUSEST 2008
	* RELEASE CODENAME: "ikegami", in thanks for solving the problem
	  of getting lexical replacement of subroutines working for real
	  under Perl 5.8.  As this works better than my 5.10 implemenation,
	  it forms the foundation for this release.

	* Removed inappropriate diagnostics about :lexical from Fatal.pm

	* Moved can't mix lexical and void diagnostics to autodie.pm

	* Added some basic tests for sysopen()

	* Removed the 5.10 only way of tracking lexical hints with
	  %^H.  Our code now exclusively uses the more portable
	  5.8 code that employs Scope::Guard (and has less side-effects).

	* Exotic system is no longer clobbered under 5.10 outside of
	  autodie's scope.

	* autodie::exception::match is better exercised in the 5.8
	  test suite.

	* Re-enabled 'use autodie' vanilla tests.

	* t/backcompat.t no longer fails under Devel::Cover

	* Repeating function names in arguments to autodie no
	  longer causes those functions to become 'stuck' in
	  autodying mode.

	* Wrong-version of Fatal.pm support added, along with basic
	  hints on how to get it working.

	* Expanded documentation on autodie, particularly for
	  exception handling under Perl 5.8.

	* Less warnings from t/exceptions.t when running under 5.10.

	* All releases now really depend upon Scope::Guard, not just 5.8.

1.10_06 Sun Jun 22 21:50:39 AUSEST 2008

	* RELEASE CODENAME: "Chocolateboy", in thanks for his wonderful
	  insights, and for letting me sound off way too many ideas
	  about how things may be done.

	* Fixed speeling errors in context.t, thanks to Stennie.

	* Fixed minor pod errors and omissions.

	* Fixed bug in recv.t which resulted in an incorrect number