@@ -7,6 +7,9 @@ Revision history for Fatal
           only return undef to indicate failure.  CORE::send and
           CORE::recv are examples of these.
 
+        * You can now 'use autodie qw(fork)' to make sure your
+          forks are successful (they must return defined).
+
 1.10_07  Sun Jun 29 15:54:26 AUSEST 2008
 	* RELEASE CODENAME: "ikegami", in thanks for solving the problem
 	  of getting lexical replacement of subroutines working for real
